--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mundo das camisetas de futebol</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<img src="banner.webp" alt="">
+
     <h1>Sobre o Mundo das Camisetas de Futebol</h1>
     
         
